# simready-foundation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  repo.toml  requirements-docs.txt  requirements.txt
nv_core/sr_specs/: build.py  codegen.bat  codegen.sh  pyproject.toml
nv_core/sr_specs/docs/: __main__.py  conf.py  index.md
nv_core/sr_specs/docs/_static/: tags.css
nv_core/sr_specs/docs/capabilities/: __init__.py  capabilities.md
nv_core/sr_specs/docs/capabilities/example/: example.py
nv_core/sr_specs/docs/features/: FET_000-base_neutral-0.1.0-core.md  FET_001-minimal.md  FET_002-posable_bodies.md  FET_003-rigid_body_physics.md  FET_004-simulate_multi_body_physics.md  FET_005-simulate_grasp_physics.md  FET_006-materials.md  FET_007-nonvisual_materials.md  FET_011-semantic_labels.md  FET_021-robot_core.md  FET_022-driven_joints.md  FET_023-robot_materials.md  FET_024-base_articulation.md  FET_030-packaging_core.md  FET_030_packaging_core-0.1.0.json  FET_031-package_self_contained.md  FET_031_package_self_contained-0.1.0.json  FET_032-packaging_introspection.md  FET_032_packaging_introspection-0.1.0.json  FET_033-simready_packaging.md  FET_033_simready_packaging-0.1.0.json  FET_100-isaacsim-0.1.0-composition.md  feature-dependency-graph.md  features.md
nv_core/sr_specs/docs/guides/: acceptance_workflow.md  development.md  features_expansion_workflow.md  getting_started.md  guides.md  naming_conventions.md  profiles_validation_workflow.md  validate_workflow.md
nv_core/sr_specs/docs/indexes/: capability_status_index.md
nv_core/sr_specs/docs/profiles/: profiles.toml  prop-robotics-isaac.md  prop-robotics-neutral.md  prop-robotics-physx.md
(+284 files in other folders)
