# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "simready-foundation-core"
version = "0.2.0a1"
description = "SimReady Content Capabilities Validation Rules for Omniverse Asset Validator"
authors = [
    {name = "NVIDIA"},
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "omniverse-asset-validator",
    "numpy",
]

[project.urls]
Documentation = "https://docs.omniverse.nvidia.com/content-capabilities"

[project.optional-dependencies]
usd = ["usd-core>=22.11"]
test = ["pytest"]

[tool.hatch.build.hooks.custom]
path = "build.py"

[tool.hatch.build.targets.sdist]
artifacts = [
    "_build/docs",
    "_build/python/omni/capabilities",
]

[tool.hatch.build.targets.wheel.force-include]
"_build/docs" = "simready/foundation/core"
"_build/python/omni/capabilities" = "simready/foundation/core/requirements"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
